v 1.2.3 1/1/2026
- add dates to changelog v tags
- nearly finish implementing thd vs amplitude update
- replace THD vs Amplitude test with new one with multi-frequency support
- support dual generator even with wave file in scope test
- make the miniplots movable
- use ZIP compression instead of Gzip for saved tests
- after testing with box5 remove the fourth pole from RIAA emphasis/deemphasis
v 1.2.2 12/28/2025
- add phase axis settings on frequency response test
- add WaveFile generator option to use wav file (spectrum, scope)
- add RIAAChirp generator waveform for riaa preemphasis
- fix All On button to not enable Phase in sweep
- change expander icon for quick page buttons hiding
- simplify tab info dialog to remove unused left/right stuff
- add RIAA frequency deemphasis code
- change 'show miniplots' action to mean hide/show during sweeps
- alter defaults to use auto-attenuation and enable generators
- add riaa compensation files
- add biquad explanation to AudioMath.pdf
- some improvements to the online help
- place attenuation options in all tests
- add add/delete entries buttons to combodrop lists
- rename tab info to test info in each page
- add time delay statistic in oscilloscope test data summary
v 1.2.1 12/18/2025
- add Save Configuration as Default command to menu
- add Settings page accelerator
- fix startup internal harmonic issue
- allow option to refresh noise floor value periodically
- add Dn columns to new THD vs Freq
- remove old THD vs Freq and use new Opamp version
- fix COM exceptions in menu mode
- add Quick Page buttons
- totally change noise detection in THD vs Freq for startup issues
- repair initial value for Input Range to force relay delay
- switch to Menus as default setting
- add checkbox switch to plot legends for line display
- build ComboDrop control for brevity and future
- change gain test initializations and fft size/rate
- repair fittodata off-by-one
v 1.2.00 12/8/2025
- add option to replace the tabbed gui with menus